Fix bugs in equals, assign resting value to empty string.

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,70 @@
 body {
     display: flex;
     flex-direction: column;
+    background-image: url(images/oak.JPG);
 }
+
+.calc{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 400px;
+    border: solid;
+    background-color: gray;
+}
+
+.display{
+    margin: 12.5px;
+    width: 275px;
+    height: 80px;
+    background-color: lightgrey;
+    overflow:hidden
+}
+
+#previous {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 5px;
+    height: 25px;
+
+}
+
+#current {
+    display: flex;
+    justify-content: end;
+    padding: 5px;
+    font-size: x-large;
+}
+
 .container {
     display: flex;
+    width: 300px;
+    height: 290px;
+    justify-content: center;
 }
 
 .numbers {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 75px 75px 75px
+}
+
+.clear {
+    grid-column: span 2;
 }
 
 .operators{
     display: grid;
+    grid-template-columns: 50px;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:hover {
 }
