--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,18 @@ body {
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    width: 300px;
-    height: 400px;
+    width: 425px;
+    height: 525px;
     border: solid;
+    border-radius: 20px;
     background-color: gray;
 }
 
 .display{
-    margin: 12.5px;
-    width: 275px;
-    height: 80px;
+    margin: 25px 25px 18px 25px;
+    border-radius: 10px;
+    width: 372px;
+    height: 100px;
     background-color: lightgrey;
     overflow:hidden
 }
@@ -31,6 +33,7 @@ body {
     align-items: center;
     padding: 5px;
     height: 25px;
+    font-size: x-large;
 
 }
 
@@ -38,19 +41,19 @@ body {
     display: flex;
     justify-content: end;
     padding: 5px;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 .container {
     display: flex;
-    width: 300px;
-    height: 290px;
-    justify-content: center;
+    width: 372px;
+    height: 360px;
+    margin: auto
 }
 
 .numbers {
     display: grid;
-    grid-template-columns: 75px 75px 75px
+    grid-template-columns: 93px 93px 93px
 }
 
 .clear {
@@ -59,11 +62,13 @@ body {
 
 .operators{
     display: grid;
-    grid-template-columns: 50px;
+    grid-template-columns: 93px;
 }
 
 button {
     cursor: pointer;
+    border-radius: 5px;
+    font-size: xx-large;
 }
 
 button:hover {
